// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using snapshots Should render with a some props and children 1`] = `
<Sidebar
  className=""
  container="parent"
  footer=""
  header=""
  loaderLabel=""
  loading={false}
  maximized={false}
  onClickBack={null}
  onClickClose={null}
  onClose={null}
  onMaximize={null}
  onOpen={null}
  onUnmaximize={null}
  position="left"
  scrollContent={false}
  title=""
  width="md"
>
  <Sidebar.Header
    className=""
  >
    A title content
  </Sidebar.Header>
  <Sidebar.Footer
    className=""
  >
    A footer content
  </Sidebar.Footer>
</Sidebar>
`;

exports[`When using snapshots Should render with a title 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
}

.c2 {
  margin: -3rem 0 5rem;
}

.c2.in-header {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin: 0 0 0 2rem;
  line-height: 5rem;
}

.c1 {
  z-index: 1000;
  top: 0;
  max-width: 100%;
  height: 100%;
  overflow-y: auto;
  -webkit-transition: all 0.25s ease-out;
  transition: all 0.25s ease-out;
  color: #101113;
  background: #ffffff;
  border-color: #dbdcdd;
  border-style: solid;
  border-width: 0;
  box-shadow: 0 3px 4px -3px rgba(0,0,0,0.5),0 0 2px -1px rgba(0,0,0,0.4);
}

.c1.scroll-content {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: none;
}

.c1.container-parent {
  position: absolute;
}

.c1.container-root {
  position: fixed;
}

.c1.xs {
  width: 15rem;
}

.c1.sm {
  width: 25rem;
}

.c1.md {
  width: 40rem;
}

.c1.lg {
  width: 60rem;
}

.c1.maximized {
  width: 100%;
}

.c1.left {
  left: 0;
  -webkit-transform: translate(-150%,0);
  -ms-transform: translate(-150%,0);
  transform: translate(-150%,0);
  border-right-width: 4px;
}

.c1.right {
  right: 0;
  -webkit-transform: translate(150%,0);
  -ms-transform: translate(150%,0);
  transform: translate(150%,0);
  border-left-width: 4px;
}

.c1.left.maximized,
.c1.right.maximized {
  border-width: 0;
}

.c1 .back-btn,
.c1 .close-btn {
  color: #dbdcdd;
  background: transparent;
  border-width: 0;
  width: 5rem;
  height: 5rem;
  padding: 0;
}

.c1 .back-btn:hover,
.c1 .close-btn:hover {
  color: #707377;
}

.c1 .back-btn {
  float: left;
  margin-right: 0.5rem;
}

.c1 .close-btn {
  float: right;
  margin-left: 0.5rem;
}

.c1.scroll-content .header {
  margin-bottom: 2rem;
}

.c1 .content {
  margin-top: 3rem;
  padding: 2rem;
}

.c1.scroll-content .content {
  overflow-y: auto;
  margin: 0;
  border-color: #dbdcdd;
  border-style: solid;
  border-width: 1px 0 1px 0;
}

.c1.scroll-content .content::after {
  content: '';
  margin-top: 2rem;
  display: block;
}

.c1 .content.loading {
  display: none;
}

.c1.scroll-content .footer {
  margin-top: 2rem;
}

<span
  className="c0"
>
  <aside
    className="left md opened container-parent c1"
    style={undefined}
  >
    <header
      className="header"
    >
      <button
        className="close-btn"
        onClick={[Function]}
      >
        <span
          aria-hidden={true}
          className="fa fa-close fa-lg"
        />
      </button>
      <h2
        className="sidebar-title in-header c2"
      >
        A title
      </h2>
      <div
        className="clearfix"
      />
      
    </header>
    <div
      className="content"
    >
      <div />
    </div>
    
  </aside>
</span>
`;

exports[`When using snapshots Should render with an element children 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
}

.c1 {
  z-index: 1000;
  top: 0;
  max-width: 100%;
  height: 100%;
  overflow-y: auto;
  -webkit-transition: all 0.25s ease-out;
  transition: all 0.25s ease-out;
  color: #101113;
  background: #ffffff;
  border-color: #dbdcdd;
  border-style: solid;
  border-width: 0;
  box-shadow: 0 3px 4px -3px rgba(0,0,0,0.5),0 0 2px -1px rgba(0,0,0,0.4);
}

.c1.scroll-content {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: none;
}

.c1.container-parent {
  position: absolute;
}

.c1.container-root {
  position: fixed;
}

.c1.xs {
  width: 15rem;
}

.c1.sm {
  width: 25rem;
}

.c1.md {
  width: 40rem;
}

.c1.lg {
  width: 60rem;
}

.c1.maximized {
  width: 100%;
}

.c1.left {
  left: 0;
  -webkit-transform: translate(-150%,0);
  -ms-transform: translate(-150%,0);
  transform: translate(-150%,0);
  border-right-width: 4px;
}

.c1.right {
  right: 0;
  -webkit-transform: translate(150%,0);
  -ms-transform: translate(150%,0);
  transform: translate(150%,0);
  border-left-width: 4px;
}

.c1.left.maximized,
.c1.right.maximized {
  border-width: 0;
}

.c1 .back-btn,
.c1 .close-btn {
  color: #dbdcdd;
  background: transparent;
  border-width: 0;
  width: 5rem;
  height: 5rem;
  padding: 0;
}

.c1 .back-btn:hover,
.c1 .close-btn:hover {
  color: #707377;
}

.c1 .back-btn {
  float: left;
  margin-right: 0.5rem;
}

.c1 .close-btn {
  float: right;
  margin-left: 0.5rem;
}

.c1.scroll-content .header {
  margin-bottom: 2rem;
}

.c1 .content {
  margin-top: 3rem;
  padding: 2rem;
}

.c1.scroll-content .content {
  overflow-y: auto;
  margin: 0;
  border-color: #dbdcdd;
  border-style: solid;
  border-width: 1px 0 1px 0;
}

.c1.scroll-content .content::after {
  content: '';
  margin-top: 2rem;
  display: block;
}

.c1 .content.loading {
  display: none;
}

.c1.scroll-content .footer {
  margin-top: 2rem;
}

<span
  className="c0"
>
  <aside
    className="left md opened container-parent c1"
    style={undefined}
  >
    <header
      className="header"
    >
      <button
        className="close-btn"
        onClick={[Function]}
      >
        <span
          aria-hidden={true}
          className="fa fa-close fa-lg"
        />
      </button>
      
      <div
        className="clearfix"
      />
      
    </header>
    <div
      className="content"
    >
      <div />
    </div>
    
  </aside>
</span>
`;

exports[`When using snapshots Should render with the loading prop 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
}

.c3 {
  width: 4rem;
  height: 4rem;
  margin: 0 auto;
  border-width: 3px;
  border-style: solid;
  border-color: #707377;
  border-radius: 50%;
  border-left-color: transparent;
  border-bottom-color: transparent;
  border-right-color: transparent;
  -webkit-animation: iVXCSc 650ms infinite linear;
  animation: iVXCSc 650ms infinite linear;
}

.c2 {
  text-align: center;
}

.c2.centered {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  z-index: 1000;
  top: 0;
  max-width: 100%;
  height: 100%;
  overflow-y: auto;
  -webkit-transition: all 0.25s ease-out;
  transition: all 0.25s ease-out;
  color: #101113;
  background: #ffffff;
  border-color: #dbdcdd;
  border-style: solid;
  border-width: 0;
  box-shadow: 0 3px 4px -3px rgba(0,0,0,0.5),0 0 2px -1px rgba(0,0,0,0.4);
}

.c1.scroll-content {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: none;
}

.c1.container-parent {
  position: absolute;
}

.c1.container-root {
  position: fixed;
}

.c1.xs {
  width: 15rem;
}

.c1.sm {
  width: 25rem;
}

.c1.md {
  width: 40rem;
}

.c1.lg {
  width: 60rem;
}

.c1.maximized {
  width: 100%;
}

.c1.left {
  left: 0;
  -webkit-transform: translate(-150%,0);
  -ms-transform: translate(-150%,0);
  transform: translate(-150%,0);
  border-right-width: 4px;
}

.c1.right {
  right: 0;
  -webkit-transform: translate(150%,0);
  -ms-transform: translate(150%,0);
  transform: translate(150%,0);
  border-left-width: 4px;
}

.c1.left.maximized,
.c1.right.maximized {
  border-width: 0;
}

.c1 .back-btn,
.c1 .close-btn {
  color: #dbdcdd;
  background: transparent;
  border-width: 0;
  width: 5rem;
  height: 5rem;
  padding: 0;
}

.c1 .back-btn:hover,
.c1 .close-btn:hover {
  color: #707377;
}

.c1 .back-btn {
  float: left;
  margin-right: 0.5rem;
}

.c1 .close-btn {
  float: right;
  margin-left: 0.5rem;
}

.c1.scroll-content .header {
  margin-bottom: 2rem;
}

.c1 .content {
  margin-top: 3rem;
  padding: 2rem;
}

.c1.scroll-content .content {
  overflow-y: auto;
  margin: 0;
  border-color: #dbdcdd;
  border-style: solid;
  border-width: 1px 0 1px 0;
}

.c1.scroll-content .content::after {
  content: '';
  margin-top: 2rem;
  display: block;
}

.c1 .content.loading {
  display: none;
}

.c1.scroll-content .footer {
  margin-top: 2rem;
}

<span
  className="c0"
>
  <aside
    className="left md opened container-parent c1"
    style={undefined}
  >
    <header
      className="header"
    >
      <button
        className="close-btn"
        onClick={[Function]}
      >
        <span
          aria-hidden={true}
          className="fa fa-close fa-lg"
        />
      </button>
      
      <div
        className="clearfix"
      />
    </header>
    <div
      className="content loading"
    >
      <div />
    </div>
    <div
      className="centered c2"
    >
      <div>
        <div
          className="c3"
        />
        
      </div>
    </div>
  </aside>
</span>
`;
